# oscillator-sim

./: .gitignore  LICENSE  README.md  pyproject.toml
src/oscillator_sim/: __init__.py  __main__.py  constants.py  registry.py
src/oscillator_sim/core/: __init__.py  branching.py  coupling.py  glued_models.py  graph_dynamics.py  integrator.py  models.py  observables.py  omega.py  params.py  simulation.py  sphere_models.py
src/oscillator_sim/geometry/: __init__.py  base.py  curves.py
src/oscillator_sim/gui/: __init__.py  canvas2d.py  canvas3d.py  controls.py  main_window.py  status_panel.py  tray.py  wallpaper.py
src/oscillator_sim/space/: __init__.py  arcs.py  base.py  circle.py  glued.py  graph.py  sphere.py
